...
            children: [
              // Site Name
              TextFormField(
                controller: _siteCtrl,
                textCapitalization: TextCapitalization.words,
                decoration: const InputDecoration(
                  labelText: 'Site Name *',
                  prefixIcon: Icon(Icons.web),
                  border: OutlineInputBorder(),
                ),
                validator: (v) =>
                (v == null || v.trim().isEmpty) ? 'Required' : null,
              ),
...
              const SizedBox(height: 14),

              // Username
              TextFormField(
                controller: _userCtrl,
                decoration: const InputDecoration(
                  labelText: 'Username / Email *',
                  prefixIcon: Icon(Icons.person_outline),
                  border: OutlineInputBorder(),
                ),
                validator: (v) =>
                (v == null || v.trim().isEmpty) ? 'Required' : null,
              ),
...
                obscureText: _obscurePass,
                onChanged: (v) => setState(() {
                  _strength   = PasswordGenerator.scorePassword(v).score;
                  _hibpStatus = null;
                }),
                decoration: InputDecoration(
                  labelText: 'Password *',
                  prefixIcon: const Icon(Icons.lock_outline),
                  border: const OutlineInputBorder(),
                  suffixIcon: IconButton(
                    icon: Icon(_obscurePass
                        ? Icons.visibility_off
                        : Icons.visibility),
...
                onChanged: (v) => setState(() => _isFavourite = v),
              ),
              const SizedBox(height: 24),

              FilledButton(
                onPressed: _loading ? null : _save,
                child: Text(_isEdit ? 'Update Entry' : 'Save Entry'),
              ),
            ],
          ),
        ),
      ),
    );
...
